# bugtrace

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bugtrace.yaml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.md  feature_request.md
bugtrace/: __init__.py
bugtrace/agent/: __init__.py  context_builder.py  fix_validator.py  orchestrator.py  prompt_manager.py  session_agent.py  session_agent_test.py
bugtrace/analyze/: bug_analyzer.py  core.py
bugtrace/cli/: commands.py  input.py  main.py  session.py
bugtrace/config/: settings.py
bugtrace/llm/: __init__.py  base.py  langchain_wrapper.py  ollama.py
bugtrace/rag/: bm25_store.py  chunker.py  indexer.py  vector_store.py
bugtrace/rag/embeddings/: __init__.py  base.py  ollama.py  openai.py
bugtrace/report/: __init__.py  report_formatter.py  status.py  streaming.py
bugtrace/tools/: __init__.py  search_codebase.py
bugtrace/utils/: errors.py  files.py  fs.py  state.py  text.py
cli/: main.py
