[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugtrace"
version = "1.0.0"
description = "AI-powered debugging assistant with RAG-based codebase search"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ifeoluwa Sulaiman", email = "ifeoluwasulaiman@gmail.com"}
]
maintainers = [
    {name = "Ifeoluwa Sulaiman", email = "ifeoluwasulaiman@gmail.com"}
]
keywords = [
    "debugging",
    "ai",
    "llm",
    "rag",
    "codebase-search",
    "ollama",
    "assistant",
    "langchain",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/DOOMSDAY101/bugtrace"
Repository = "https://github.com/DOOMSDAY101/bugtrace"
Issues = "https://github.com/DOOMSDAY101/bugtrace/issues"
Changelog = "https://github.com/DOOMSDAY101/bugtrace/blob/main/CHANGELOG.md"
Twitter = "https://x.com/Sulaiman_Ife"
LinkedIn = "https://www.linkedin.com/in/ifeoluwa-sulaiman"

[project.scripts]
bugtrace = "bugtrace.cli.main:run"

[tool.setuptools]
packages = ["bugtrace"]