[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugtrace"
version = "1.0.0"
description = "AI-powered debugging assistant with RAG-based codebase search"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ifeoluwa Sulaiman", email = "ifeoluwasulaiman@gmail.com"}
]
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "backoff==2.2.1",
    "bcrypt==5.0.0",
    "build==1.4.0",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "chromadb==1.4.1",
    "click==8.3.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "durationpy==0.10",
    "filelock==3.20.3",
    "flatbuffers==25.12.19",
    "frozenlist==1.8.0",
    "fsspec==2026.1.0",
    "googleapis-common-protos==1.72.0",
    "greenlet==3.3.0",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface_hub==1.4.0",
    "humanfriendly==10.0",
    "idna==3.11",
    "importlib_metadata==8.7.1",
    "importlib_resources==6.5.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "kubernetes==35.0.0",
    "langchain==1.2.6",
    "langchain-chroma==1.1.0",
    "langchain-classic==1.0.1",
    "langchain-community==0.4.1",
    "langchain-core==1.2.7",
    "langchain-ollama==1.0.1",
    "langchain-text-splitters==1.1.0",
    "langgraph==1.0.6",
    "langgraph-checkpoint==4.0.0",
    "langgraph-prebuilt==1.0.6",
    "langgraph-sdk==0.3.3",
    "langsmith==0.6.4",
    "markdown-it-py==4.0.0",
    "marshmallow==3.26.2",
    "mdurl==0.1.2",
    "mmh3==5.2.0",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "numpy==2.4.1",
    "ollama==0.6.1",
    "pyfiglet==1.0.4",
    "Pygments==2.19.2",
    "PyPika==0.51.1",
    "python-dotenv==1.2.1",
    "PyYAML==6.0.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "tenacity==9.1.2",
    "typer==0.21.1",
    "typer-slim==0.21.1",
    "watchfiles==1.1.1",
    "websocket-client==1.9.0",
    "websockets==16.0",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "zstandard==0.25.0"
]
maintainers = [
    {name = "Ifeoluwa Sulaiman", email = "ifeoluwasulaiman@gmail.com"}
]
keywords = [
    "debugging",
    "ai",
    "llm",
    "rag",
    "codebase-search",
    "ollama",
    "assistant",
    "langchain",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/DOOMSDAY101/bugtrace"
Repository = "https://github.com/DOOMSDAY101/bugtrace"
Issues = "https://github.com/DOOMSDAY101/bugtrace/issues"
Changelog = "https://github.com/DOOMSDAY101/bugtrace/blob/main/CHANGELOG.md"
Twitter = "https://x.com/Sulaiman_Ife"
LinkedIn = "https://www.linkedin.com/in/ifeoluwa-sulaiman"

[project.scripts]
bugtrace = "bugtrace.cli.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["bugtrace*"]
exclude = ["tests*"]