[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugtrace"
version = "2.2.0"
description = "AI-powered debugging assistant with RAG-based codebase search"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ifeoluwa Sulaiman", email = "ifeoluwasulaiman30@gmail.com"}
]
dependencies = [
    "chromadb>=1.4,<2",
    "langchain>=1.2,<2",
    "langchain-chroma>=1.1,<2",
    "langchain-community>=0.4,<1",
    "langchain-core>=1.3,<2",
    "langchain-ollama>=1.0,<2",
    "langchain-openai>=1.2,<2",
    "langchain-text-splitters>=1.1,<2",

    "langgraph>=1.0,<2",
    "langgraph-checkpoint>=4.0,<5",
    "langgraph-prebuilt>=1.0,<2",

    "openai>=2,<3",
    "ollama>=0.6,<1",

    "rank-bm25>=0.2,<1",
    "sentence-transformers>=5,<6",

    "pyyaml>=6,<7",
    "python-dotenv>=1,<2",

    "rich>=14,<15",
    "typer>=0.21,<1",
    "pyfiglet>=1,<2",

    "tqdm>=4,<5",
]
maintainers = [
    {name = "Ifeoluwa Sulaiman", email = "ifeoluwasulaiman30@gmail.com"}
]
keywords = [
    "debugging",
    "ai",
    "llm",
    "rag",
    "codebase-search",
    "ollama",
    "assistant",
    "langchain",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/DOOMSDAY101/bugtrace"
Repository = "https://github.com/DOOMSDAY101/bugtrace"
Issues = "https://github.com/DOOMSDAY101/bugtrace/issues"
Changelog = "https://github.com/DOOMSDAY101/bugtrace/blob/main/CHANGELOG.md"
Twitter = "https://x.com/Sulaiman_Ife"
LinkedIn = "https://www.linkedin.com/in/ifeoluwa-sulaiman"

[project.scripts]
bugtrace = "bugtrace.cli.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["bugtrace*"]
exclude = ["tests*"]